Ubicación dirección cliente en mapa

--- a/app.json
+++ b/app.json
@@ -44,6 +44,7 @@
         "measurementId": "G-KLHH31ZED1"
       }
     },
-    "description": ""
+    "description": "Aplicación móvil para la gestión de guardias de la compañía de seguridad privada SERPROEMCAM CIA. LTDA.",
+    "githubUrl": "https://github.com/serpro2130/appmovilgestionguardias"
   }
 }
