--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-firebase-recaptcha": "^1.3.0",
     "expo-font": "~8.4.0",
     "expo-image-picker": "~9.2.0",
+    "expo-location": "~10.0.0",
     "expo-notifications": "~0.8.2",
     "expo-permissions": "~10.0.0",
     "expo-secure-store": "~9.3.0",
@@ -39,6 +40,7 @@
     "react-native-elements": "~2.3.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-maps": "0.27.1",
     "react-native-modal-datetime-picker": "^9.2.3",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
