Mensaje seleccionar ubicación

--- a/app.json
+++ b/app.json
@@ -13,9 +13,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -25,10 +23,18 @@
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE",
         "NOTIFICACION",
-        "USER_FACING_NOTIFICATIONS"
+        "USER_FACING_NOTIFICATIONS",
+        "LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
       ],
       "useNextNotificationsApi": true,
-      "package": "com.amplgdg.appgestionguardias"
+      "package": "com.amplgdg.appgestionguardias",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyC2L0BHQX4FpF-O_5mFLcNSQ1nrFAPIl9c"
+        }
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
